--- a/solution/docker-compose.yaml
+++ b/solution/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
     container_name: promo_web
     ports: [ "8080:8000" ]
     environment:
+      PYTHONUNBUFFERED: "1"
       SERVER_ADDRESS: "0.0.0.0:8000"
       POSTGRES_USERNAME: "postgres"
       POSTGRES_PASSWORD: "postgres"
