--- a/solution/requirements.txt
+++ b/solution/requirements.txt
@@ -27,7 +27,9 @@ pykwalify==1.8.0
 pytest==7.2.2
 python-box==6.1.0
 python-dateutil==2.9.0.post0
+pytz==2024.2
 PyYAML==6.0.2
+redis==5.2.1
 referencing==0.36.1
 requests==2.32.3
 rpds-py==0.22.3
